--- a/src/components/Pag/style.css
+++ b/src/components/Pag/style.css
@@ -1,8 +1,12 @@
 .flip-card {
     background-color: transparent;
-    width: 200px;
-    height: 205px;
-    border: 2px solid #dc90f0;
+    margin-right: auto;
+    margin: 5px;
+    width: 190px;
+    height: 235px;
+    border-radius: 5%;
+    box-shadow: 0 6px 5px rgb(130, 23, 192);
+    border: 1px solid #dc90f0;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
   
@@ -32,12 +36,16 @@
   
   /* Style the front side (fallback if image is missing) */
   .flip-card-front {
+    border-radius: 5%;
+    box-shadow: 0 6px 5px rgb(130, 23, 192);
     background-color: #3ef7b9;
     color: black;
   }
   
   /* Style the back side */
   .flip-card-back {
+    border-radius: 5%;
+    box-shadow: 0 6px 5px rgb(130, 23, 192);
     background-color: rgb(190, 163, 224);
     color: white;
     transform: rotateY(180deg);
