--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -106,17 +106,18 @@
 .home-container .logo .hover-show.active .circle:nth-child(7) {
   position: absolute;
   transform: translateX(-210%);
-  background: url(../props/m.png);
+  background: url(../props/L.png);
   background-size: cover;
   background-position: center;
 }
 .home-container .logo .hover-show.active .circle:nth-child(8) {
   position: absolute;
   transform: translateX(-150%) translateY(-150%);
-  background: url(../props/mdb.svg);
+  background: url(../props/nest.png);
   background-size: cover;
   background-position: center;
 }
+
 
 .home-container img {
   position: absolute;
